--- a/experiments/templates/experiments/conversion_summary.html
+++ b/experiments/templates/experiments/conversion_summary.html
@@ -82,6 +82,6 @@
 </table>
 {% else %}
 <p>
-  No activity report generated for {{ daily_data.0.date }}
+  No engagement report generated for {{ daily_data.0.date }}
 </p>
 {% endif %}
